@@ -1,3 +1,4 @@
+2090 [Audio Encoder] do not abort downmix anymore if input avs file has no channel position information
 2089 [HD Streams Extractor] defaulting to English if the track language can not be indentified (MKV only)
 2088 [Audio Encoder] cosmetics
 2087 [FFMS] remove AssumeFPS() as it is causing problems with hybrid/telecined input. Bug #3463347
